[project]
name = "cve-tracker"
version = "0.1.0"
description = "Track CVEs and correlate with GitHub PRs"
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.57.1",
    "PyGithub>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
]

[project.scripts]
cve-fetch = "main:main"

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0", 
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"
exclude = [".git", "__pycache__", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [".venv/", ".git/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
